--- a/src/app/shared/components/yes-no-button-group/yes-no-button-group.component.html
+++ b/src/app/shared/components/yes-no-button-group/yes-no-button-group.component.html
@@ -1,4 +1,5 @@
 <div
+  appKm
   class="button-group"
   [attr.aria-labelledby]="id"
   role="button-group">
@@ -6,8 +7,12 @@
   [attr.id]="id"
   class="label">{{ label }}</label>
   <button
+    appKmItem
+    (focused) = "activate(options.YES)"
     role="radio"
+    [attr.disabled] = "disabled? disabled : null"
     [attr.aria-checked]="value === options.YES"
+    [attr.tabindex]="value === options.YES || value === null? 0 : -1"
     type="button"
     class="button button-yes"
     [class.button-pressed]="value === options.YES"
@@ -16,8 +21,12 @@
     Yes
   </button>
   <button
+    appKmItem
+    (focused) = "activate(options.NO)"
     role="radio"
+    [attr.disabled] = "disabled? disabled : null"
     [attr.aria-checked]="value === options.NO"
+    [attr.tabindex]="value === options.NO? 0 : -1"
     type="button"
     class="button button-no"
     [class.button-pressed]="value === options.NO"
